tests/ui/parser/issues/issue-8537.rs
pub extern
  "invalid-ab_isize" //~ ERROR invalid ABI
fn foo() {}

fn main() {}
